<resources>
    <string name="app_name">Shiny Collector</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="search_game_hint">Search game</string>
    <string name="search_pokemon_hint">Search pokemon by name or ID</string>
    <string name="search_platform_hint">Search platform</string>
    <string name="search_method_hint">Search method</string>
    <string name="dialog_loadingdata">Loading data…</string>
    <string name="dialog_deleteconfirmation">Are you sure you want to delete this?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_set">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_details">Details</string>
    <string name="menu_delete">Delete</string>
    <string name="home_hunting_title">Hunting</string>
    <string name="home_completed_title">Completed</string>
    <string name="home_statistics_title">Statistics</string>
    <string name="home_no_hunts">Start a hunt by clicking the button below!</string>
    <string name="details_id">Dex ID</string>
    <string name="details_encounters">Encounters</string>
    <string name="details_timeelapsed">Time Elapsed</string>
    <string name="details_startdate">Started</string>
    <string name="details_capturedate">Encountered</string>
    <string name="details_game">Game</string>
    <string name="details_generation">Generation</string>
    <string name="details_pokemon">Pokemon</string>
    <string name="details_method">Method</string>
    <string name="button_selectgame">Select Game</string>
    <string name="button_selectpokemon">Select Pokemon</string>
    <string name="button_selectplatform">Select Platform</string>
    <string name="button_selectmethod">Select Method</string>
    <string name="button_starthunt">Start Hunt</string>
    <string name="button_resume">Resume Hunt</string>
    <string name="pokeapi_loadingdata">Loading data from PokeAPI server…</string>
    <string name="pokeapi_loadingdata_failure">Failed to connect to PokeAPI!</string>
    <string name="icon_default">Default</string>
    <string name="icon_redblue">R/B</string>
    <string name="icon_yellow">Yellow</string>
    <string name="icon_gold">Gold</string>
    <string name="icon_silver">Silver</string>
    <string name="icon_crystal">Crystal</string>
    <string name="icon_rubysapphire">R/S</string>
    <string name="icon_emerald">Emerald</string>
    <string name="icon_fireredleafgreen">FR/LG</string>
    <string name="icon_diamondpearl">D/P</string>
    <string name="icon_diamondpearl_female">D/P ♀</string>
    <string name="icon_platinum">Platinum</string>
    <string name="icon_platinum_female">Platinum ♀</string>
    <string name="icon_heartgoldsoulsilver">HG/SS</string>
    <string name="icon_heartgoldsoulsilver_female">HG/SS ♀</string>
    <string name="icon_blackwhite">B/W</string>
    <string name="icon_blackwhite_female">B/W ♀</string>
    <string name="icon_xy">X/Y</string>
    <string name="icon_xy_female">X/Y ♀</string>
    <string name="icon_omegarubyalphasapphire">OR/AS</string>
    <string name="icon_omegarubyalphasapphire_female">OR/AS ♀</string>
    <string name="icon_sunmoon">S/M</string>
    <string name="icon_sunmoon_female">S/M ♀</string>
    <string name="icon_swordshield">S/S</string>
    <string name="icon_swordshield_female">S/S ♀</string>
    <string name="button_selecticon">Select Icon</string>
    <string name="button_confirm">Confirm</string>
    <string name="error_claim_zero_encounters">You need at least 1 encounter to claim a shiny!</string>
    <string name="error_counter_not_found">Error in creating view, counter not found…</string>
    <string name="error_data_not_found">Error in creating view, did not receive data…</string>
    <string name="dialog_count_title">Set Counter</string>
    <string name="dialog_count_desc">Enter a number 0–999999. Changes the counter.</string>
    <string name="dialog_count_invalid">Number needs to be 0–999999!</string>
    <string name="dialog_increment_title">Set Incremental Value</string>
    <string name="dialog_increment_desc">Enter a number 1–99. Changes the value added/subtracted.</string>
    <string name="dialog_increment_invalid">Number needs to be 1–99!</string>
    <string name="dialog_claim_title">Claim Shiny</string>
    <string name="dialog_claim_desc">Are you sure you want to claim this shiny?</string>
    <string name="text_header_congratulations">CONGRATULATIONS!</string>
    <string name="text_header_line1_youcaptured">You captured</string>
    <string name="text_header_line2_after">after</string>
    <string name="text_header_line2_encounters">encounters!</string>
    <string name="text_body_preface_game">You captured this Pokémon on</string>
    <string name="text_body_preface_method">using the method</string>
    <string name="text_body_preface_start">which you started on</string>
    <string name="text_body_preface_end">and ended on</string>
    <string name="text_body_preface_time">for a total time of</string>
    <string name="button_text_claim">Add to collection</string>
    <string name="claim_error_message">ERROR</string>
    <string name="text_total_caught">Total Caught</string>
    <string name="text_number_encounters"># Encounters</string>
    <string name="text_average_encounters">Avg. Encounters</string>
    <string name="text_most_games">Most # Game</string>
    <string name="text_most_pokemon">Most # Pokemon</string>
    <string name="text_random_spotlight">Random Spotlight</string>
    <string name="text_most_encountered">Most Encounters</string>
    <string name="text_least_encountered">Least Encounters</string>
    <string name="text_name_null">\?</string>
    <string name="text_number_null">0</string>
    <string name="type_normal">Normal</string>
    <string name="type_fire">Fire</string>
    <string name="type_fighting">Fighting</string>
    <string name="type_water">Water</string>
    <string name="type_flying">Flying</string>
    <string name="type_grass">Grass</string>
    <string name="type_poison">Poison</string>
    <string name="type_electric">Electric</string>
    <string name="type_ground">Ground</string>
    <string name="type_psychic">Psychic</string>
    <string name="type_rock">Rock</string>
    <string name="type_ice">Ice</string>
    <string name="type_bug">Bug</string>
    <string name="type_dragon">Dragon</string>
    <string name="type_ghost">Ghost</string>
    <string name="type_dark">Dark</string>
    <string name="type_steel">Steel</string>
    <string name="type_fairy">Fairy</string>
    <string name="settings_category_general_title">General</string>
    <string name="settings_preference_darkmode_title">Dark Theme</string>
    <string name="settings_preference_darkmode_desc">Turns on dark mode to save battery</string>
    <string name="settings_preference_darkmode_key">NightMode</string>
    <string name="settings_preference_sortlist_title">Sort List</string>
    <string name="settings_preference_sortlist_desc">Default: Sort from newest to oldest</string>
    <string name="settings_preference_sortlist_key">SortMode</string>
    <string-array name="settings_preference_sortlist_entries">
        <item>Date: Newest to Oldest (Default)</item>
        <item>Date: Oldest to Newest</item>
        <item>Count: Highest ↑ to Lowest ↓</item>
        <item>Count: Lowest ↓ to Highest ↑</item>
        <item>Name: A-Z</item>
        <item>Name: Z-A</item>
        <item>Pokédex: Newest to Oldest</item>
        <item>Pokédex: Oldest to Newest</item>
        <item>Generation: Newest to Oldest</item>
        <item>Generation: Oldest to Newest</item>
    </string-array>
    <string name="settings_preference_anim_title">Enable Animations</string>
    <string name="settings_preference_anim_key">AnimMode</string>
    <string name="settings_category_hunting_title">Hunting</string>
    <string name="settings_preference_vibrate_title">Vibration</string>
    <string name="settings_preference_vibrate_desc">Vibrate when counting</string>
    <string name="settings_preference_vibrate_key">VibrateMode</string>
    <string-array name="list_games_names">
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Gold</item>
        <item>Silver</item>
        <item>Crystal</item>
        <item>Ruby</item>
        <item>Sapphire</item>
        <item>Emerald</item>
        <item>Colosseum</item>
        <item>XD Gale of Darkness</item>
        <item>FireRed</item>
        <item>LeafGreen</item>
        <item>Diamond</item>
        <item>Pearl</item>
        <item>Platinum</item>
        <item>HeartGold</item>
        <item>SoulSilver</item>
        <item>Rumble</item>
        <item>Battle Revolution</item>
        <item>Black</item>
        <item>White</item>
        <item>Black 2</item>
        <item>White 2</item>
        <item>X</item>
        <item>Y</item>
        <item>Omega Ruby</item>
        <item>Alpha Sapphire</item>
        <item>Go</item>
        <item>Sun</item>
        <item>Moon</item>
        <item>Ultra Sun</item>
        <item>Ultra Moon</item>
        <item>Lets Go Pikachu</item>
        <item>Lets Go Eevee</item>
        <item>Sword</item>
        <item>Shield</item>
        <item>Mystery Dungeon Rescue DX</item>
    </string-array>
    <string-array name="list_platforms_names">
        <item>None</item>
        <item>Green Grass</item>
        <item>Ugly Grass</item>
        <item>Forest</item>
        <item>Brown Path</item>
        <item>Light Path</item>
        <item>Metal Path</item>
        <item>River</item>
        <item>Cave Pool</item>
        <item>Rocks A</item>
        <item>Rocks B</item>
        <item>Snow</item>
        <item>Snowy Grass</item>
        <item>Ice</item>
        <item>Wood Bridge</item>
        <item>Foster</item>
    </string-array>
    <string-array name="list_methods_names">
        <item>DV Method (Gen 1)</item>
        <item>Random Encounters</item>
        <item>Soft Reset</item>
        <item>Run Away</item>
        <item>Egg Hatching</item>
        <item>Masuda Method</item>
        <item>Pokeradar</item>
        <item>Chain Fishing</item>
        <item>Friend Safari</item>
        <item>Horde Hunting</item>
        <item>Dexnav</item>
        <item>SOS</item>
        <item>Ultra Wormhole</item>
        <item>Catch Combo</item>
        <item>Island Scan</item>
        <item>Fossil Restoration</item>
        <item>Dynamax Adventures</item>
    </string-array>
    <string name="admob_app_id">ca-app-pub-9716148949436094~7719956197</string>
    <string name="admob_native_id">ca-app-pub-9716148949436094/2424764468</string>
    <string name="admob_banner_id">ca-app-pub-9716148949436094/6406874526</string>
    <string name="admob_interstitial_starthunt_id">ca-app-pub-9716148949436094/6295850421</string>
    <string name="admob_interstitial_claim_id">ca-app-pub-9716148949436094/1483357507</string>
</resources>