<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:title="@string/settings_category_general_title"
        app:iconSpaceReserved="false">
        <CheckBoxPreference
            app:title="@string/settings_preference_darkmode_title"
            app:iconSpaceReserved="false"
            app:summary="@string/settings_preference_darkmode_desc"
            app:key="@string/settings_preference_darkmode_key"
            app:defaultValue="false">
        </CheckBoxPreference>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_category_hunting_title"
        app:iconSpaceReserved="false">
        <CheckBoxPreference
            app:title="@string/settings_preference_vibrate_title"
            app:iconSpaceReserved="false"
            app:summary="@string/settings_preference_vibrate_desc"
            app:key="@string/settings_preference_vibrate_key"
            app:defaultValue="true">
        </CheckBoxPreference>
    </PreferenceCategory>
</PreferenceScreen>